Changes for 1.1beta3:

 - double sided graphs (Alexei)
 - added "SET_<TYPE>_RESULT" macross (Eugene)
 - new W32 un/install floppy. (Eugene)
 - added script for GUI regression testing (Alexei)
 - reverted multiple server patch (Alexei)
 - fixed autoregistration (Alexei)
 - added preliminary bulk host and bulk user loader.  (James)
 - applied Graph Dropdown fix.  Thanks to Elkor (James)
 - applied SNMPv3 fix.  Thanks to Sauron (James)  --  Please note I do not
 have any SNMPv3 items to test this with, but it did complete and server runs
 after build.
 - added column graphs_items.yaxisside (Alexei)
 - startup script for Tru64 (Alexei)
 - added parameters support for user specifed functions "$1 $2 .. $9" (Eugene)
 - added table history_uint (Alexei)
 - fixed memory leak for windows agent (Eugene)
 - fixed windows agent hanging (Eugene)
 - reverted graph generation fix (Alexei)
 - improved loging to file for windows (Eugene)
 - added support of system.cpu.intr for Linux (Eugene)
 - added support of kernel.maxfiles for Linux (Eugene)
 - added support of vfs.dev.read[*] for Linux (Eugene)
 - added support of vfs.dev.write[*] for Linux (Eugene)
 - fixed vfs.file.regmatch[*] (Alexei)
 - added support of net.if.collisions[*] for Linux (Eugene)
 - added support of net.if.in[*] for Linux (Eugene)
 - added support of net.if.out[*] for Linux (Eugene)
 - Applied MySQL reconnect patch. (James)
 - Applied multiple server patch. (James)
 - Applied graph generation fix.  Thanks to Elkor (James)
 - Updated displayed version in UI to 1.1beta3 (James)
 - Applied span inconsistency patch.  Thanks to Elkor (James)
 - Added dbpatches to support 'User Configurable Refresh' (James)
 - integrated 'OpenBSD3.7.c' functionality (Eugene)
 - Applied ServerByName patch. (James)
 - First pass at optimization of MySQL queries on reports page. (James)
 - Fixed Groupid selection in triggers page (James)
 - Fixed Update Profile in profiles page (James)
 - Fixed Number Of Hosts in reports page (James)